--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@ html, body {
   justify-content: center;
   padding-top: 15px;
   font-family: 'Franklin Gothic Medium', sans-serif;
+  padding: 15px
 }
 
-
+@media (max-width: 600px) {
+  .App {
+    flex-direction: column;
+  }
+}
