--- a/src/styles/LightFollower.css
+++ b/src/styles/LightFollower.css
@@ -1,21 +1,21 @@
-/* src/LightFollower.css */
+
 body {
   margin: 0;
   overflow: hidden;
-  background-color: #000022; /* Fondo azul oscuro */
+  background-color: #000022;
 }
 
 .light {
   position: fixed;
   border-radius: 50%;
-  width: 200px; /* Tamaño de la luz */
+  width: 200px;
   height: 300px;
-  background-color: rgba(255, 255, 255, 0.01); /* Luz más tenue */
+  background-color: rgba(255, 255, 255, 0.01);
   pointer-events: none;
   mix-blend-mode: screen;
   transform: translate(-50%, -50%);
-  box-shadow: 0 0 100px 50px rgba(255, 255, 255, 0.01), /* Luz interna más difusa */
-               0 0 200px 100px rgba(255, 255, 255, 0.08), /* Luz media más extendida */
-               0 0 300px 150px rgba(255, 255, 255, 0.08); /* Luz externa muy suave */
-  filter: blur(250px); /* Aumenta el desenfoque para una luz muy difuminada */
+  box-shadow: 0 0 100px 50px rgba(255, 255, 255, 0.01),
+               0 0 200px 100px rgba(255, 255, 255, 0.08),
+               0 0 300px 150px rgba(255, 255, 255, 0.08);
+  filter: blur(250px);
 }
