--- a/src/styles/Title.css
+++ b/src/styles/Title.css
@@ -8,7 +8,19 @@
 }
 
 .cups-description {
-  font-size: 24px; /* Más pequeño que el texto "CUPS" */
-  color: #ccc; /* Texto gris claro */
+  font-size: 24px;
+  color: #ccc;
   margin-top: 5px;
+}
+
+@media (max-width: 600px) {
+  .cups-heading {
+    font-size: 40px;
+    letter-spacing: 5px;
+    padding-top: 20px;
+  }
+
+  .cups-description {
+    font-size: 14px;
+  }
 }
